--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,13 +22,13 @@
             <a class="nav-link <%= activePage === 'home' ? 'active' : '' %>" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link <%= activePage === 'explore' ? 'active' : '' %>" href="/explore">Explore</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link <%= activePage === 'myPosts' ? 'active' : '' %>" href="/myposts">My Posts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link <%= activePage === 'create' ? 'active' : '' %>" href="/post">Create</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link <%= activePage === 'Upload Video' ? 'active' : '' %>" href="/upload-video">Zlogify Your Video</a>
           </li>
           <li class="nav-item">
             <a class="nav-link <%= activePage === 'vlogs' ? 'active' : '' %>" href="/vlogs">Vlogs</a>
